# shufti-matcher

./: Cargo.toml  readme.md
doc/: benchmark.md
shufti-macro/: Cargo.toml
shufti-macro/src/: lib.rs
shufti-matcher/: Cargo.toml
shufti-matcher/benches/: find.rs
shufti-matcher/examples/: simple.rs
shufti-matcher/src/: lib.rs
shufti-matcher/src/arch/: mod.rs  neon.rs
shufti-matcher/src/arch/x86_64/: avx2.rs  fallback.rs  mod.rs  ssse3.rs
